All UI Transistions Complete
@xbili sorry got tried of trying to get ngAnimate to work, used some
jQuery instead.

--- a/src/app/info/info.tpl.html
+++ b/src/app/info/info.tpl.html
@@ -8,8 +8,8 @@
         <h4>For check-in, please have the following prepared: </h4>
         <ul>
           <li>Matriculation card</li>
-          <li>Indemnity form (printed and filled) | <a href="{{indemnityForm}}">download</a></li>
-          <li>Swimming form (printed and filled) | <a href="{{swimmingForm}}">download</a></li>
+          <li>Indemnity form (printed and filled) | <a href="{{indemnityForm}}" target="_blank">download</a></li>
+          <li>Swimming form (printed and filled) | <a href="{{swimmingForm}}" target="_blank">download</a></li>
         </ul>
         <br>
 
@@ -53,7 +53,7 @@
         </ul>
         <br>
         <p class="ans">
-          If any of your queries have not been brought up above, please send them to <a href="mailto:tembusuorientation2015@gmail.com">tembusuorientation2015@gmail.com</a>
+          If any of your queries have not been brought up above, please send them <a href="mailto:tembusuorientation2015@gmail.com">here</a>
         </p>
         <br>
   </div>
