--- a/src/app/og/ogSubView/ogSubView.less
+++ b/src/app/og/ogSubView/ogSubView.less
@@ -1,3 +1,6 @@
+#subview{
+  background-color: rgb(34, 34, 34);
+}
 #headImg{
   @media only screen
 and (min-device-width : 320px)
@@ -8,13 +11,15 @@ and (max-device-width : 568px) {
 
 #ogHeader, #ogl{
   // padding-top: 5%;
-  font-size: 80px;
+  font-size: 60px;
   text-align: center;
   display: none;
   @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 568px) {
-  display: block;
+  display: inline-block;
+  text-align: center;
+  padding: 5%;
 }
 }
 
