--- a/src/common/navbar.less
+++ b/src/common/navbar.less
@@ -1,3 +1,7 @@
+// html{
+//   background-color: rgb(34, 34, 34);
+// }
+
 .rotate{
     -moz-transition: all 0.25s linear;
     -webkit-transition: all 0.25s linear;
@@ -187,17 +191,4 @@
   -ms-transition: all .1s ease-in-out;
   -o-transition: all .1s ease-in-out;
   transition: all .1s ease-in-out;
-}
-
-//Animations
-/**********************
-      MIXINS
-***********************/
-.uiViewSlide() {
-  -webkit-transition: 0.9s ease-in-out;
-  -moz-transition: 0.9s ease-in-out;
-  -o-transition: 0.9s ease-in-out;
-  transition: 0.9s ease-in-out;
-  position: absolute;
-  width: 100%;
 }
