--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -2,9 +2,12 @@
 @import url(http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700);
 
 /* ----------- Non-Retina Screens ----------- */
+#landingLogo{
+    z-index: 50;
+}
 
 #headSection {
-  z-index: -10;
+  // z-index: -10;
   position: fixed;
   background-color: rgb(34, 34, 34);
   // background-size:cover;
