--- a/src/app/info/info.less
+++ b/src/app/info/info.less
@@ -24,5 +24,22 @@ li{
 }
 
 .ans{
+  @media only screen
+  and (min-device-width : 320px)
+  and (max-device-width : 568px) {
+    padding: 3%;
+  }
   font-size: 20px;
+}
+
+li a:link {
+    text-decoration: none;
+}
+
+li a:visited {
+    text-decoration: none;
+}
+
+li a:hover {
+    text-decoration: underline;
 }
