--- a/src/app/og/og.less
+++ b/src/app/og/og.less
@@ -1,8 +1,5 @@
-.ogView{
-    -webkit-transition: all 2s ease;
-    -moz-transition: all 2s ease;
-    -o-transition: all 2s ease;
-    transition: all 2s ease;
+#ogView{
+    background-color: rgb(34, 34, 34);
 }
 
 #bg {
@@ -11,7 +8,7 @@
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 100%px;
+	min-height: 100%;
 	width: 100%;
 
     -webkit-background-size: 100%;
