v2 fixes, refer to issue tracker

--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-click="proceed()">
   <div id="headSection">
         <img id="landingLogo" class="img-responsive" src="assets/img/bg/logo_small.jpg" alt="" />
   </div>
-  <div class="ui inverted segment uicontainer">
-    <button id="continueBtn" ng-click="proceed()" class="ui inverted button">Enter</button>
-  </div>
+  <!-- <div class="ui inverted segment uicontainer">
+    <button id="continueBtn" class="ui inverted button">Enter</button>
+  </div> -->
 </div>
