--- a/src/app/info/info.less
+++ b/src/app/info/info.less
@@ -1,9 +1,19 @@
 // @import url(http://fonts.googleapis.com/css?family=UnifrakturMaguntia);
 @import url(http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700);
 
+.icon{
+  // display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 50px;
+}
+
+#intro li{
+  font-size: 25px;
+}
 /* ----------- Non-Retina Screens ----------- */
 body{
-  background-color: rgb(34, 34, 34);
+  background-color: rgb(31, 31, 31);
   // color: rgb(227, 228, 227);
 }
 #mainDiv {
@@ -15,12 +25,34 @@ body{
     }
 }
 
+.download{
+  color: rgb(193, 193, 193);
+}
+
+.download:hover{
+  color: white;
+}
+
 #header, .title{
       text-align: center;
 }
 
+.col-md-4 h3{
+  text-align: left;
+  padding-left: 9%;
+  padding-bottom: 5%;
+}
+
+#header{
+  font-size: 100px;
+}
+
 li{
   font-size: 20px;
+}
+
+.row ul{
+  text-align: justify;
 }
 
 .ans{
