Fixed Safari positioning bug

--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -4,6 +4,8 @@
 /* ----------- Non-Retina Screens ----------- */
 #landingLogo{
     z-index: 50;
+    padding: 5%;
+    display: block; margin: 0 auto;
 }
 
 #headSection {
