--- a/src/app/og/ogSubView/ogSubView.tpl.html
+++ b/src/app/og/ogSubView/ogSubView.tpl.html
@@ -20,16 +20,16 @@
           {{desc}}
         </div>
         <br>
-<!--
+
         <p id="ogl">ogls</p>
         <div class="row ogl">
           <ul>
-            <li id="headOGL">{{currentOGInfo["headOGL"]}}</li>
+            <li id="headOGL">{{headOGL}} (head)</li>
           </ul>
           <ul ng-repeat="ogl in ogls track by $index">
             <li>{{ogl}}</li>
           </ul>
-        </div> -->
+        </div>
 
 
       </div>
