Logos further compressed + ogl name formatted

--- a/src/app/og/ogSubView/ogSubView.less
+++ b/src/app/og/ogSubView/ogSubView.less
@@ -39,7 +39,9 @@ and (max-device-width : 568px) {
 
 #headOGL{
   color: rgb(227, 86, 86);
+  text-align: justify;
 }
+
 
 .col-md-6 img{
   z-index: -10;
@@ -132,3 +134,11 @@ and (max-device-width : 568px) {
   padding-right: 1%;
   clip-path: circle(60px at center);
 }
+
+// .icon{
+//   // display: block;
+//     margin-left: auto;
+//     margin-right: auto;
+//     font-size: 50px;
+//     text-align: center;
+// }
