--- a/src/app/og/ogSubView/ogSubView.tpl.html
+++ b/src/app/og/ogSubView/ogSubView.tpl.html
@@ -20,11 +20,11 @@
           {{desc}}
         </div>
         <br>
-
         <p id="ogl">ogls</p>
         <div class="row ogl">
           <ul>
-            <li id="headOGL">{{headOGL}} (head)</li>
+            <li id="headOGL">{{headOGL}}</i>
+</li>
           </ul>
           <ul ng-repeat="ogl in ogls track by $index">
             <li>{{ogl}}</li>
