Fix about page layout

--- a/src/app/about/about.less
+++ b/src/app/about/about.less
@@ -22,7 +22,11 @@
         line-height: 40px;
         li {
             float: left;
+            width: 400px;
+        }
+        li.vn-two-rows {
             width: 200px;
         }
     }
 }
+
