Add new font for update page header

--- a/src/app/updates/updates.less
+++ b/src/app/updates/updates.less
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Lucida Blackletter';
+    src: url('assets/fonts/lucida-blackletter/Aro.woff') format('woff');
+}
+
 .updates {
   background-image: url(img/shared/vn-background.jpg);
   -webkit-background-size: 100% auto;
@@ -7,6 +12,8 @@
   background-size: 100% auto;
 
   header h1 {
+    font-family: 'Lucida Blackletter';
+    font-size: 70px;
     font-weight: 700;
   }
   .vn-update-box p {
@@ -18,3 +25,4 @@
     border: 5px solid black;
   }
 }
+
