--- a/src/app/updates/updates.tpl.html
+++ b/src/app/updates/updates.tpl.html
@@ -7,8 +7,11 @@
 
     <div class="row">
         <article class="col-md-12 left-padding-1 right-padding-1 bot-margin-1" ng-repeat="update in updates">
-            <div class="vn-update-box all-padding-1 clearfix">
-                <h2>{{ update.title }}</h2>
+            <div class="vn-update-box all-padding-1 clearfix" ng-if="update.is_live">
+                <header class="row">
+                    <h2>{{ update.title }}</h2>
+                </header>
+                <img class="img-responsive vn-update-img pull-left right-margin-3 bot-margin-3" src="{{ update.img_url }}" alt="{{ update.img_alt }}" />
                 <p ng-bind-html="update.content"></p>
             </div>
         </article>
