Move common font css into main.less

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -18,6 +18,19 @@
   font-weight: 400;
 }
 
+// For updates and about page
+@import url(http://fonts.googleapis.com/css?family=Karla);
+
+@font-face {
+    font-family: 'Lucida Blackletter';
+    src: url(fonts/lucida-blackletter/Aro.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'Charlemagne Std Bold';
+    src: url(fonts/charlemagne-std-bold.otf) format('otf');
+}
+
 body {
     height: 100%;
     font-family: 'Josefin Slab';
