Fix about page styling

--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -1,4 +1,4 @@
-<div class="about">
+<div class="about left-padding-1 right-padding-1">
     <div class="container">
         <header class="row">
             <div class="col-md-12 text-center">
