--- a/src/app/about/about.less
+++ b/src/app/about/about.less
@@ -5,9 +5,18 @@
     -ms-background-size: 100% auto;
     -o-background-size: 100% auto;
     background-size: 100% auto;
+
+    font-family: 'Karla', sans-serif;
     
     header h1 {
+        font-size: 70px;
+        font-family: 'Lucida Blackletter';
         font-weight: 700;
+    }
+    h2 {
+        font-size: 45px;
+        font-family: 'Charlemagne Std Bold';
+        font-weight: 500px;
     }
     .vn-profile-img {
         width: 100px;
