Move about page styling into it's own class

--- a/src/app/about/about.less
+++ b/src/app/about/about.less
@@ -6,8 +6,6 @@
     -o-background-size: 100% auto;
     background-size: 100% auto;
 
-    font-family: 'Karla', sans-serif;
-    
     header h1 {
         font-size: 70px;
         font-family: 'Lucida Blackletter';
@@ -27,15 +25,8 @@
     .vn-sub-comm {
         min-height: 800px;
     }
-    .vn-sub-comm ul {
-        line-height: 40px;
-        li {
-            float: left;
-            width: 400px;
-        }
-        li.vn-two-rows {
-            width: 200px;
-        }
+    .vn-comm {
+        font-family: 'Karla', sans-serif;
     }
 }
 
