--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -6,7 +6,7 @@
             </div>
         </header>
 
-        <div class="row">
+        <div class="vn-comm row">
             <div class="col-md-12 text-center">
                 <h2>{{ mainTeam.committee }}</h2>
                 <p>{{ mainTeam.description }}</p>
@@ -18,14 +18,14 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="vn-comm row">
             <div class="col-md-12 bot-margin-1 all-padding-1">
                 <h2 class="text-center">{{ finComm.committee }}</h2>
                 <p class="text-center">{{ finComm.description }}</p>
             </div>
         </div>
 
-        <div class="row">
+        <div class="vn-comm row">
             <div class="vn-sub-comm col-md-6 all-padding-1" ng-repeat="comm in subComm">
                 <h2 class="text-center">{{ comm.committee }}</h2>
                 <p>{{ comm.description }}</p>
