Remove min height for mobile display

--- a/src/app/about/about.less
+++ b/src/app/about/about.less
@@ -25,6 +25,9 @@
     .vn-sub-comm {
         min-height: 800px;
     }
+    .col-xs-12.vn-sub-comm {
+        min-height: 0;
+    }
     .vn-comm {
         font-family: 'Karla', sans-serif;
     }
