--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="vn-comm row">
-            <div class="vn-sub-comm col-md-6 all-padding-1" ng-repeat="comm in subComm">
+            <div class="vn-sub-comm col-xs-12 col-md-6 all-padding-1" ng-repeat="comm in subComm">
                 <h2 class="text-center">{{ comm.committee }}</h2>
                 <p>{{ comm.description }}</p>
                 <div class="row text-center">
