Make og subview content scrollable

--- a/src/app/og/ogSubView/ogSubView.less
+++ b/src/app/og/ogSubView/ogSubView.less
@@ -1,5 +1,4 @@
 #subview{
-  position: fixed;
   background-color: rgb(31, 31, 31);
   height: 100%;
 
@@ -12,6 +11,7 @@
 
 #headImg{
 transform: translateY(-10%);
+position: fixed;
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 568px) {
@@ -60,6 +60,7 @@ and (max-device-width : 568px) {
   color: rgb(193, 193, 193);
   font-size: 20px;
   padding: 1%;
+  float: right;
 
   @media only screen
 and (min-device-width : 320px)
