--- a/src/app/og/ogSubView/ogSubView.less
+++ b/src/app/og/ogSubView/ogSubView.less
@@ -92,6 +92,7 @@ and (max-device-width : 568px) {
 }
 
 #backBtn {
+  padding-top: 5px;
   border-radius: 7px;
   position:fixed;
   top:10px;
@@ -100,10 +101,10 @@ and (max-device-width : 568px) {
   z-index:100;
   display: block;
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
   color: white;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   line-height: 40px;
   cursor: pointer;
   background: rgba(0,0,0,0.5);
