Fix responsive layout for about page

--- a/src/app/about/about.less
+++ b/src/app/about/about.less
@@ -25,7 +25,8 @@
     .vn-sub-comm {
         min-height: 800px;
     }
-    .col-xs-12.vn-sub-comm {
+    .visible-xs.vn-sub-comm,
+    .visible-sm.vn-sub-comm {
         min-height: 0;
     }
     .vn-comm {
