Fix updates image height and width

--- a/src/app/updates/updates.less
+++ b/src/app/updates/updates.less
@@ -21,8 +21,8 @@
       white-space: pre-wrap;
   }
   .vn-update-img {
-    max-height: 250px;
-    max-width: 250px;
+    max-height: 33%;
+    max-width: 33%;
   }
 }
 
